--- a/main.tex
+++ b/main.tex
@@ -42,7 +42,7 @@
 
 \include{style}
 
-\usepackage[scale=.9]{tgheros} % or helvet
+\usepackage[scale=.9]{helvet} % or tgheros
 \renewcommand{\familydefault}{\sfdefault}
 
 \begin{document}
