--- a/style.tex
+++ b/style.tex
@@ -17,7 +17,7 @@
 \pagestyle{fancy}
 \fancyhf{}
 \fancyhead[L]{\nouppercase{\leftmark}}
-\fancyhead[R]{Mathe in SMP}
+\fancyhead[R]{Mathematik - SMP}
 %\fancyfoot[C]{\thepage}
 
 
